# ChangeLog for sci-biology/foldingathome
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/foldingathome/ChangeLog,v 1.19 2007/07/12 17:19:05 angelos Exp $

  12 Jul 2007; Christoph Mende <angelos@gentoo.org>
  foldingathome-5.0.2-r5.ebuild:
  Stable on amd64 wrt bug #164823

  12 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  foldingathome-5.0.2-r5.ebuild:
  stable x86, bug 164823

  03 Jul 2007; Jeff Gardner <je_fro@gentoo.org>
  foldingathome-5.91_beta.ebuild:
  foldingathome-5.91_beta has expired. Removing KEYWORDS until the next
  release arrives.

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  foldingathome-5.0.2-r3.ebuild, foldingathome-5.0.2-r5.ebuild:
  (QA) RESTRICT clean up.

  21 Apr 2007; Jeff Gardner <je_fro@gentoo.org>
  foldingathome-5.0.2-r3.ebuild, foldingathome-5.0.2-r5.ebuild:
  Use newconfd wrt bug #174266

  11 Apr 2007; Jeff Gardner <je_fro@gentoo.org>
  foldingathome-5.91_beta.ebuild:
  Fixed to better install files under /etc.

*foldingathome-5.91_beta (10 Apr 2007)

  10 Apr 2007; Jeff Gardner <je_fro@gentoo.org> +files/5.91_beta/fah-init,
  +files/5.91_beta/folding-conf.d, +files/5.91_beta/initfolding,
  +foldingathome-5.91_beta.ebuild:
  Adding the amd64-smp client for testing. Thanks to John Gibson.

  03 Nov 2006; Olivier Fisette <ribosome@gentoo.org> -files/init-5.0.2-r4,
  -foldingathome-5.0.2-r4.ebuild:
  Pruned old version.

*foldingathome-5.0.2-r5 (16 Jun 2006)

  16 Jun 2006; Patrick Kursawe <phosphan@gentoo.org> +files/init-5.0.2-r5,
  +foldingathome-5.0.2-r5.ebuild:
  Adding --chdir to start-stop-daemon because of bug #109707

*foldingathome-5.0.2-r4 (14 Aug 2005)

  14 Aug 2005; Olivier Fisette <ribosome@gentoo.org> +files/init-5.0.2-r4,
  +foldingathome-5.0.2-r4.ebuild:
  Fixed bug #95697: license is now correct and the binaries are no longer
  stripped since we are not allowed to modify them. Thanks to Ian Kelly