@@ -1,6 +1,6 @@
 #!/bin/sh
 
 cd /opt/foldingathome/amd64-smp
-/opt/foldingathome/amd64-smp/fah5 -configonly
+/opt/foldingathome/amd64-smp/fah6 -configonly
 /bin/chown -R foldingathome:nogroup /opt/foldingathome/amd64-smp
 
